# monorepo

./: .gitignore  .oxlintrc.json  Cargo.toml  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shell.nix
app/mpv_plugin/: Cargo.toml  moon.yml
app/mpv_plugin/src/: actor.rs  context.rs  error.rs  lib.rs  web.rs
app/mpv_plugin/src/task/: add_subtitle.rs  clear_subtitles.rs  mod.rs
lib/rust/dictionary_parser/: Cargo.toml
lib/rust/dictionary_parser/src/: error.rs  lib.rs
lib/rust/epub/: Cargo.toml  moon.yml
lib/rust/epub/src/: archive.rs  error.rs  lib.rs
lib/rust/epub/src/epub/: container.rs  mod.rs  package.rs  package_specifier.rs
lib/rust/epub/tests/: integration.rs
lib/rust/forvo/: Cargo.toml
lib/rust/forvo/src/: client.rs  lib.rs  serde.rs
lib/rust/forvo/src/action/: mod.rs  word_pronunciations.rs
lib/rust/language_pack/: Cargo.toml
lib/rust/language_pack/src/: align.rs  hirschberg.rs  lib.rs  pipeline.rs  processor.rs  segment.rs  transform.rs
lib/rust/language_pack_jp/: Cargo.toml  README.md
lib/rust/language_pack_jp/src/: hirschberg.rs  lib.rs  morphology.rs  segment.rs  splitting.rs  text.rs  transcription.rs  transform.rs
lib/rust/language_pack_jp/src/processor/: collapse_emphatic_sequences.rs  convert_half_width.rs  mod.rs  normalize_combining_characters.rs  normalize_kanji.rs  normalize_unicode.rs
lib/rust/language_pack_jp/src/transform/: mod.rs  transforms.rs
lib/rust/language_pack_jp/tests/: mod.rs
lib/rust/language_pack_jp/tests/regression/: mod.rs
lib/rust/language_pack_jp/tests/snapshots/: r#mod__check_inflection_breakpoints-10.snap  r#mod__check_inflection_breakpoints-11.snap  r#mod__check_inflection_breakpoints-12.snap  r#mod__check_inflection_breakpoints-13.snap  r#mod__check_inflection_breakpoints-14.snap  r#mod__check_inflection_breakpoints-15.snap  r#mod__check_inflection_breakpoints-16.snap  r#mod__check_inflection_breakpoints-17.snap  r#mod__check_inflection_breakpoints-18.snap  r#mod__check_inflection_breakpoints-19.snap  r#mod__check_inflection_breakpoints-2.snap  r#mod__check_inflection_breakpoints-20.snap  r#mod__check_inflection_breakpoints-21.snap  r#mod__check_inflection_breakpoints-22.snap  r#mod__check_inflection_breakpoints-23.snap  r#mod__check_inflection_breakpoints-24.snap  r#mod__check_inflection_breakpoints-25.snap  r#mod__check_inflection_breakpoints-26.snap  r#mod__check_inflection_breakpoints-27.snap  r#mod__check_inflection_breakpoints-3.snap  r#mod__check_inflection_breakpoints-4.snap  r#mod__check_inflection_breakpoints-5.snap  r#mod__check_inflection_breakpoints-6.snap  r#mod__check_inflection_breakpoints-7.snap  r#mod__check_inflection_breakpoints-8.snap  r#mod__check_inflection_breakpoints-9.snap  r#mod__check_inflection_breakpoints.snap  r#mod__check_regressions-11.snap  r#mod__check_regressions-12.snap  r#mod__check_regressions-14.snap  r#mod__check_regressions-15.snap  r#mod__check_regressions-16.snap  r#mod__check_regressions-17.snap  r#mod__check_regressions-19.snap  r#mod__check_regressions-2.snap  r#mod__check_regressions-20.snap  r#mod__check_regressions-21.snap  r#mod__check_regressions-22.snap  r#mod__check_regressions-23.snap  r#mod__check_regressions-24.snap  (+11 more)
lib/rust/morphology/: Cargo.toml  README.md
lib/rust/morphology/src/: lib.rs
lib/rust/pitch_detection/: Cargo.toml
lib/rust/pitch_detection/benches/: utils_benchmark.rs
lib/rust/pitch_detection/src/: lib.rs
lib/rust/pitch_detection/src/detector/: autocorrelation.rs  internals.rs  mcleod.rs  mod.rs  yin.rs
lib/rust/pitch_detection/src/float/: mod.rs
lib/rust/pitch_detection/src/utils/: buffer.rs  peak.rs
lib/rust/pitch_detection/tests/: main.rs
lib/rust/srs_bridge_anki/: Cargo.toml  moon.yml
lib/rust/srs_bridge_anki/src/client/: error.rs  mod.rs  request.rs
lib/rust/transcription/: Cargo.toml
lib/rust/transcription/src/: error.rs  lib.rs
project/immersly/lib/rust/dictionary/: Cargo.toml
project/immersly/lib/rust/dictionary-app/: Cargo.toml
project/immersly/lib/rust/dictionary-infra/: Cargo.toml
project/immersly/lib/rust/features/: Cargo.toml
project/immersly/lib/rust/library-app/: Cargo.toml
project/immersly/lib/rust/library-infra/: Cargo.toml
project/mecrab/fuzz/: Cargo.toml
project/mecrab/fuzz/fuzz_targets/: dictionary.rs  lattice.rs  parser.rs  viterbi.rs
project/mecrab/kizame/: Cargo.toml  README.md  TODO.md  WORD2VEC_TRAINING_GUIDE.md
project/mecrab/kizame/src/: main.rs  server.rs
project/mecrab/mecrab/: Cargo.toml  README.md  TODO.md
project/mecrab/mecrab-bench/: Cargo.toml
project/mecrab/mecrab-bench/benches/: dictionary.rs  library_benchmark.rs  parsing.rs  viterbi.rs
project/mecrab/mecrab-bench/src/: lib.rs
project/mecrab/mecrab-builder/: Cargo.toml  README.md  TODO.md
project/mecrab/mecrab-builder/src/: lib.rs  wikidata.rs
project/mecrab/mecrab-cli/: Cargo.toml  README.md
project/mecrab/mecrab-cli/src/: main.rs
project/mecrab/mecrab-word2vec/: Cargo.toml  IMPLEMENTATION.md  README.md
project/mecrab/mecrab-word2vec/src/: io.rs  lib.rs  model.rs  skipgram.rs  trainer.rs  vocab.rs
project/mecrab/mecrab/src/: bench.rs  debug.rs  error.rs  lib.rs  normalize.rs  stream.rs  vectors.rs
project/prisma/: Cargo.toml  Makefile
project/prisma/apps/cli/: .gitignore  Cargo.toml
project/prisma/apps/fmt/: Cargo.toml
project/prisma/psl/parser-database/: Cargo.toml
project/prisma/psl/psl/: build.rs
project/prisma/psl/psl-ast/: Cargo.toml
project/prisma/psl/psl-core/: Cargo.toml
project/prisma/psl/psl-schema/: Cargo.toml
project/prisma/quaint/: Cargo.toml
project/prisma/quaint/src/: connector.rs  prelude.rs
project/prisma/query-engine/core-tests/: build.rs
project/prisma/schema-engine/sql-introspection-tests/: build.rs
project/prisma/schema-engine/sql-migration-tests/: build.rs
templates/feature-group/[feature_name]/: Cargo.toml
templates/feature-group/[feature_name]-app/: Cargo.toml
templates/feature-group/[feature_name]-infra/: Cargo.toml
templates/feature-group/[feature_name]/src/: lib.rs
(+1784 files in other folders)
