[workspace]
members = [
    "lib/rust/*",
    "project/*/bin/*",
    "project/*/lib/rust/*",



    "project/prisma/apps/*",
    "project/prisma/schema-engine/core",
    "project/prisma/schema-engine/connectors/*",
    "project/prisma/schema-engine/datamodel-renderer",
    "project/prisma/schema-engine/json-rpc-api",
    "project/prisma/schema-engine/sql-migration-tests",
    "project/prisma/schema-engine/sql-introspection-tests",
    "project/prisma/schema-engine/sql-schema-describer",
    "project/prisma/query-engine/connectors/*",
    "project/prisma/query-engine/connector-test-kit-rs/qe-setup",
    "project/prisma/query-engine/connector-test-kit-rs/query-engine-tests",
    "project/prisma/query-engine/connector-test-kit-rs/query-test-macros",
    "project/prisma/query-engine/connector-test-kit-rs/query-tests-setup",
    "project/prisma/query-engine/core",
    "project/prisma/query-engine/core-tests",
    "project/prisma/query-engine/black-box-tests",
    "project/prisma/query-engine/dmmf",
    "project/prisma/query-engine/query-structure",
    "project/prisma/query-engine/query-engine",
    "project/prisma/query-engine/request-handlers",
    "project/prisma/query-engine/schema",
    "project/prisma/query-engine/query-builders/*",
    "project/prisma/psl/*",
    "project/prisma/quaint",
]
exclude = [
    "project/fude/bin/fude-storybook",
    "project/immersly/bin/desktop-ui",
    "project/obsidian/bin/obsidian-plugin-datatables",
    "project/obsidian/bin/obsidian-plugin-keymaps",
    "project/obsidian/bin/obsidian-plugin-privacy",
    "project/railgun/bin/docs",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
authors = []
edition = "2024"
license = "MPL 2.0"
publish = false
repository = "https://github.com/sribich/language"

[workspace.dependencies]
dictionary_parser = { path = "./lib/rust/dictionary_parser" }
epub = { path = "./lib/rust/epub" }
forvo = { path = "./lib/rust/forvo" }
language_pack = { path = "./lib/rust/language_pack" }
language_pack_jp = { path = "./lib/rust/language_pack_jp" }
lexorank = { path = "./lib/rust/lexorank" }
morphology = { path = "./lib/rust/morphology" }
mpv_plugin = { path = "./app/mpv_plugin" }
# pitch_detection = { path = "./lib/rust/pitch_detection" }
# prisma = { path = "./lib/rust/prisma" }
# prisma_derive = { path = "./lib/rust/prisma_derive" }
serde-util = { path = "./lib/rust/serde-util" }

sha256-util = { path = "./lib/rust/sha256-util" }
srs_bridge_anki = { path = "./lib/rust/srs_bridge_anki" }
subtitle = { path = "./lib/rust/subtitle" }
transcription = { path = "./lib/rust/transcription" }
uuid47 = { path = "./lib/rust/uuid47" }

macro_util = { path = "./project/railgun/lib/rust/macro_util" }
railgun = { path = "./project/railgun/lib/rust/railgun" }
railgun_api = { path = "./project/railgun/lib/rust/railgun_api" }
railgun_api_derive = { path = "./project/railgun/lib/rust/railgun_api_derive" }
railgun_core = { path = "./project/railgun/lib/rust/railgun_core" }
railgun_di = { path = "./project/railgun/lib/rust/railgun_di" }
railgun_di_derive = { path = "./project/railgun/lib/rust/railgun_di_derive" }
railgun_error = { path = "./project/railgun/lib/rust/railgun_error" }
railgun_error_derive = { path = "./project/railgun/lib/rust/railgun_error_derive" }
railgun_security = { path = "./project/railgun/lib/rust/railgun_security" }
railgun_settings = { path = "./project/railgun/lib/rust/railgun_settings" }
railgun_settings_derive = { path = "./project/railgun/lib/rust/railgun_settings_derive" }
railgun_telemetry = { path = "./project/railgun/lib/rust/railgun_telemetry" }
rpc = { path = "./project/railgun/lib/rust/rpc" }
typegen = { path = "./project/railgun/lib/rust/typegen" }
typegen_derive = { path = "./project/railgun/lib/rust/typegen_derive" }
typegen_typescript = { path = "./project/railgun/lib/rust/typegen_typescript" }

#################################################################################
## Prisma
#################################################################################
quaint = { path = "./project/prisma/quaint", default-features = false }
prisma-fmt = { path = "./project/prisma/apps/fmt" }

build-utils = { path = "./project/prisma/lib/rust/build-utils" }
crosstarget-utils = { path = "./project/prisma/lib/rust/crosstarget-utils" }
panic-utils = { path = "./project/prisma/lib/rust/panic-utils" }
prisma-metrics = { path = "./project/prisma/lib/rust/metrics" }
prisma-value = { path = "./project/prisma/lib/rust/prisma-value" }
telemetry = { path = "./project/prisma/lib/rust/telemetry" }
user-facing-errors = { path = "./project/prisma/lib/rust/user-facing-errors" }
user-facing-error-macros = { path = "./project/prisma/lib/rust/user-facing-error-macros" }
test-setup = { path = "./project/prisma/lib/rust/test-setup" }
test-macros = { path = "./project/prisma/lib/rust/test-macros" }
query-engine-common = { path = "./project/prisma/lib/rust/query-engine-common" }
sql-ddl = { path = "./project/prisma/lib/rust/sql-ddl" }
query-template = { path = "./project/prisma/lib/rust/query-template" }

psl = { path = "./project/prisma/psl/psl" }
psl-core = { path = "./project/prisma/psl/psl-core" }
diagnostics = { path = "./project/prisma/psl/diagnostics" }
psl-ast = { path = "./project/prisma/psl/psl-ast" }
parser-database = { path = "./project/prisma/psl/parser-database" }

query-engine = { path = "./project/prisma/query-engine/query-engine" }
query-core = { path = "./project/prisma/query-engine/core" }
schema = { path = "./project/prisma/query-engine/schema" }
query-structure = { path = "./project/prisma/query-engine/query-structure" }
query-connector = { path = "./project/prisma/query-engine/connectors/query-connector" }
query-builder = { path = "./project/prisma/query-engine/query-builders/query-builder" }
sql-query-builder = { path = "./project/prisma/query-engine/query-builders/sql-query-builder" }
dmmf = { path = "./project/prisma/query-engine/dmmf" }
request-handlers = { path = "./project/prisma/query-engine/request-handlers", default-features = false }
sql-query-connector = { path = "./project/prisma/query-engine/connectors/sql-query-connector", default-features = false }

schema-core = { path = "./project/prisma/schema-engine/core" }
datamodel-renderer = { path = "./project/prisma/schema-engine/datamodel-renderer" }
schema-connector = { path = "./project/prisma/schema-engine/connectors/schema-connector" }
sql-schema-connector = { path = "./project/prisma/schema-engine/connectors/sql-schema-connector" }
sql-schema-describer = { path = "./project/prisma/schema-engine/sql-schema-describer" }

psl-schema = { path = "./project/prisma/psl/psl-schema" }
generator = { path = "./project/prisma/lib/rust/generator" }
generator-runtime = { path = "./project/prisma/lib/rust/generator-runtime" }
generator-shared = { path = "./project/prisma/lib/rust/generator-shared" }

#################################################################################
## Dependencies
#################################################################################
ahash = "0.8.11"
anyhow = "1"
arbitrary = "1.2.0"
arboard = "3.4.1"
async-trait = "0.1.83"
axum = "0.8.4"
axum-extra = "0.10.1"
axum-tracing-opentelemetry = "0.28.0"
barrel = { git = "https://github.com/prisma/barrel.git", branch = "mssql-support" }
base64 = "0.22"
bigdecimal = "0.3" # 0.3 is needed for prisma
bincode = "2.0.0-rc.3"
bitflags = "2"
bit-vec = "0.6"
bon = "3"
bson = "2"
byteorder = "1.5.0"
bytes = "1"
cfg_aliases = "0.2"
cfg-if = "1"
chrono = "0.4.39"
# chumsky = "0.9.3"
clap = "4.5.4"
codspeed-criterion-compat = "1"
colored = "3"
color-eyre = "0.6.2"
concat-idents = "1"
connection-string = "0.2"
const-str = "0.6.2"
convert_case = "0.8.0"
crossbeam-channel = "0.5"
cruet = "0.15"
cuid = { git = "https://github.com/prisma/cuid-rust", branch = "v1.3.3-wasm32-unknown-unknown" }
# cpal = "0.15.3"
# criterion = "0.5.1"
darling = "0.23.0"
# dasp = "0.11.0"
# derive_more = { version = "2.0.1", features = ["full"] }
derive_more = "0.99"
deunicode = "1.6.2"
difflib = { version = "0.4.0" }
dirs = "6.0.0"
dissimilar = "1"
dotenvy = "0.15.7"
either = "1"
enumflags2 = "0.7"
env_logger = "0.11"
expect-test = "1.5.0"
flate2 = "1"
ffmpeg-sidecar = "2.0.5"
fsrs = "3.0.0"
futures = "0.3"
futures-util = "0.3.31"
getrandom = "0.2"
gix = "0.74.1"
graphql-parser = { git = "https://github.com/prisma/graphql-parser" }
hashbrown = "0.16"
heapless = "0.8.0"
heck = "0.5.0"
hex = "0.4"
hound = "3.5.1"
html5ever = "0.31.0"
hyper = "0.14"
include_dir = "0.7.3"
indexmap = "2"
indoc = "2"
insta = "1"
itertools = "0.14.0"
log = "0.4"
# loom = "0.5.6"
lru = "0.7"
lru-cache = "0.1"
lsp-types = "0.95"
mecab = "0.1.6"
metrics = "0.23.0"
metrics-util = "0.17.0"
metrics-exporter-prometheus = { version = "0.15.3", default-features = false }
mime = "0.3.17"
mobc = "0.8"
mpv-client = "1.0.1"
mysql_async = { git = "https://github.com/prisma/mysql_async", branch = "vendored-openssl" }
# ntest = "0.9.0"
names = { version = "0.11", default-features = false }
nanoid = "0.4"
native-tls = "0.2"
nom = "7"
num_cpus = "1"
once_cell = "1.19.0"
opentelemetry = "0.29.1"
opentelemetry_sdk = "0.29.0"
opentelemetry-appender-tracing = "0.29.1"
opentelemetry-otlp = "0.29.0"
opentelemetry-semantic-conventions = "0.29.0"
opentelemetry-stdout = "0.29.0"
# owning_ref = "0.4.1"
parking_lot = "0.12.3"
parse-hyperlinks = "0.23"
paste = "1"
pathdiff = "0.2.3"
percent-encoding = "2"
pest = "2"
pest_derive = "2"
petgraph = "0.8"
pin-project = "1"
postgres-native-tls = { git = "https://github.com/prisma/rust-postgres", branch = "pgbouncer-mode" }
postgres-types = { git = "https://github.com/prisma/rust-postgres", branch = "pgbouncer-mode" }
pretty_assertions = "1"
prettyplease = "0.2.17"
proc-macro2 = "1.0.78"
proc-macro-crate = "3.1.0"
proc-macro-error2 = "2.0.1"
quick-xml = "0.37.5"
quote = "1.0.35"
rand = "0.9.0"
rayon = "1.8.1"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
rfd = { version = "0.16.0", default-features = false, features = ["gtk3"] }
rustc-hash = { version = "2.1.1" }
rusqlite = "0.32"
# rspack_core = "0.2.0"
# rspack_error = "0.2.0"
rustfft = { version = "6.0.1", default-features = false }
# scoped_threadpool = "0.1.9"
semver = "1.0.23"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["float_roundtrip", "preserve_order", "raw_value"] }
serde_path_to_error = "0.1.16"
serde_repr = "0.1"
serde-untagged = "0.1.6"
serde-value = "0.7.0"
sha2 = "0.10.8"
similar = "2"
siphasher = "1.0.1"
smallvec = "1"
strip-ansi-escapes = "0.1"
structopt = "0.3"
sqlformat = "0.2"
sqlparser = "0.32"
sqlx-core = "0.8"
sqlx-sqlite = "0.8"
# stats_alloc = "0.1.10"
syn = { version = "2.0.60", features = ["full"] }
tempfile = "3.10.1"
thiserror = "2.0.12"
tiberius = { git = "https://github.com/prisma/tiberius", branch = "main", default-features = false }
tikv-jemallocator = "0.6.0"
tikv-jemalloc-ctl = "0.6.0"
tokio = "1.36.0" # sync feature?
tokio-postgres = { git = "https://github.com/prisma/rust-postgres", branch = "pgbouncer-mode" }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.26"
tokio-util = "0.7.11"
toml = "0.8"
toml_edit = "0.22.12"
tower-http = "0.6.2"
tracing = "0.1.40"
tracing-core = "0.1"
tracing-error = "0.2"
tracing-futures = "0.2"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = "0.3.18"
tracing-test = "0.2"
# trybuild = "1.0.91"
typed-arena = "2.0.2"
ulid = "1"
unicode-normalization = "0.1.25"
unicode-properties = "0.1.1"
url = "2.5.0"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4", "v7"] }
versions = "6"
zip = "2.2.0"

################################################################################
## Test Profile
################################################################################
# [profile.test]
# codegen-backend = "llvm"

################################################################################
## Dev Profile
################################################################################
[profile.dev]
# Enable basic optimizations for _our_ code. This additionally fixes some
# issues with LeakSanitizer not detecting memory leaks in unoptimized builds.
opt-level = 1
# debug = false
# strip = false
# codegen-backend = "cranelift"

[profile.dev.package."*"]
# Fully optimize dependencies so that development performance is not bottlenecked
# by external factors.
# opt-level = 3
opt-level = 3

# codegen-backend = "llvm"

################################################################################
## Release Profile
################################################################################
[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Final: "fat"
lto = "fat"

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
# Final: 4
codegen-units = 1

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = false

# https://doc.rust-lang.org/rustc/codegen-options/index.html#strip
strip = "symbols"

################################################################################
## Clippy
################################################################################
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
cargo       = { level = "deny", priority = -1 }
complexity  = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery     = { level = "deny", priority = -1 }
pedantic    = { level = "deny", priority = -1 }
perf        = { level = "deny", priority = -1 }
style       = { level = "deny", priority = -1 }
suspicious  = { level = "deny", priority = -1 }

# Restriction
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
as_pointer_underscore = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
default_numeric_fallback = "deny"
doc_include_without_cfg = "deny"
# doc_paragraphs_missing_punctuation = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exit = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
map_err_ignore = "deny"
mem_forget = "deny"
missing_asserts_for_indexing = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_raw_strings = "deny"
non_zero_suggestions = "deny"
# pattern_type_mismatch = "deny" # Too much noise
pathbuf_init_then_push = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
rest_pat_in_fully_bound_structs = "deny"
self_named_module_files = "deny"
str_to_string = "deny"
string_add = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unused_result_ok = "deny"

#################################################################################
## Allow List
##
## Allowed lints should have a clear reason for existing. Please make sure that
## the reasoning behind the change is documented.
##
#################################################################################

# TODO: These need documentation
# Cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# Complexity
type_complexity = "allow"

# Pedantic
doc_markdown = "allow"
match_bool = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_continue = "allow"
return_self_not_must_use = "allow"
too_many_lines = "allow"
used_underscore_binding = "allow"


# Nursery
redundant_pub_crate = "allow" # Safeguards future scope changes from inadvertently exposing
missing_const_for_fn = "allow"
option_if_let_else = "allow"
use_self = "allow"

# Deny These Eventually
unwrap_used = "allow"
unwrap_in_result = "allow"
todo = "allow"

##
## Complexity
##

## This rule conflicts with `wildcard_enum_match_arm` when `non_exhaustive`
## is used.
##
## Any use of this rule when both are set would trigger `match_same_arms`
## unless `non_exhaustive_omitted_patterns_lint` is also being used.
##
## When both of these are present, the wildcard '_' case must also be present.
## This would cause an issue when separating the wildcard variant as it would
## require us duplicate the match arm for any variants we are explicitly ignoring.
wildcard_in_or_patterns = "allow"

##
## Pedantic
##

## While this is good to have most of the time, it is more stylistic and there
## are too many cases where something might be named similarly enough to the
## struct name while having a good reason for the name.
struct_field_names = "allow"

##
## Style
##

## The pattern this targets is often used to disallow instantiating a public
## type that only has public fields.
##
## This pattern is useful when we have a type that will commonly be used in
## a pattern matched binding, where we need the fields to be public but do
## not want to allow the consumer to arbitrarily create those types.
##
## ```rust
## /// Consumers can no longer directly construct this type. We want to be able
## /// to manually control it since it has a computed property baked in.
## pub struct Example {
##     pub computed: (),
##     _private: (),
## }
## ```
##
manual_non_exhaustive = "allow"
