[package]
name = "dictionary_parser"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
railgun = { workspace = true }

rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-untagged = { workspace = true }
tokio = { workspace = true, features = ["full"] }
zip = { workspace = true }
convert_case = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
