[package]
name = "language_pack"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
blart = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]

[lints]
workspace = true
