[package]
name = "language_pack_jp"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
language_pack = { workspace = true }

epub = { workspace = true }
typegen = { workspace = true }

itertools = { workspace = true }
#
serde = { workspace = true }
serde_json = { workspace = true }
blart = { workspace = true }
mecab = { workspace = true }

tracing = { workspace = true }

memchr = { workspace = true }
lazy_static = { workspace = true }
unicode-normalization = { workspace = true }
phf = { workspace = true }
stringzilla = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
indoc = { workspace = true }
mecrab = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
