[package]
name = "morphology"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
# thiserror = { workspace = true }
# color-eyre = { workspace = true }
#
# srs_bridge_anki = { workspace = true }
# serde = { workspace = true, features = ["derive"] }
# serde_json = { workspace = true }
# tracing = { workspace = true }
# tracing-subscriber = { workspace = true }
# tokio = { workspace = true, features = ["full"] }
# chumsky = { workspace = true }
rayon = { workspace = true }
mecab = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
