[package]
name = "pitch_detection"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
hound = { workspace = true }
rustfft = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "utils_benchmark"
harness = false


[lints]
workspace = true
