[package]
name = "srs_bridge_anki"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tracing = { workspace = true }

[lints]
workspace = true
