[package]
name = "transcription"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
railgun = { workspace = true } #, default-features = false }
morphology = { workspace = true }

hound = { workspace = true }
# whisper-rs = { workspace = true, features = ["cuda"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

rayon = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
