[package]
name = "kizame"

[dependencies]
# Core library
mecrab = { workspace = true }

# Word2Vec training
mecrab-word2vec = { workspace = true }

# CLI framework
clap.workspace = true

# Platform directories (for dict init)
dirs = { workspace = true }

# Optional: Heavy data pipeline (Wikidata processing)
mecrab-builder = { workspace = true, optional = true }

# Progress bars (lightweight, always included for dict info)
indicatif.workspace = true

# TUI framework for lattice debugger
ratatui = "0.30"
crossterm = "0.29"

# Memory mapping for vector info
memmap2.workspace = true

# HTTP server (optional)
axum = { version = "0.8", optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace", "cors"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
# Enable `kizame build` command with Wikidata pipeline
full = ["mecrab-builder"]
# Enable HTTP server mode
server = ["axum", "tokio", "tower", "tower-http", "serde", "serde_json"]

[[bin]]
name = "kizame"
path = "src/main.rs"
