[package]
name = "kizame"
version.workspace = true
edition.workspace = true

[dependencies]
mecrab = { workspace = true }
mecrab-builder = { workspace = true, optional = true }
mecrab-word2vec = { workspace = true }

clap = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
memmap2 = { workspace = true }
ratatui = "0.30"
crossterm = "0.29"

[features]
default = []
# Enable `kizame build` command with Wikidata pipeline
full = ["mecrab-builder"]

[[bin]]
name = "kizame"
path = "src/main.rs"
