[package]
name = "kizame"
version.workspace = true
edition.workspace = true

[dependencies]
mecrab = { workspace = true }

clap = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
memmap2 = { workspace = true }
ratatui = "0.30"
crossterm = "0.29"

[features]
default = []

[[bin]]
name = "kizame"
path = "src/main.rs"
