[package]
name = "mecrab-builder"
version.workspace = true
edition.workspace = true

[dependencies]
mecrab = { workspace = true }

csv.workspace = true
flate2.workspace = true
futures.workspace = true
indicatif.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
