[package]
name = "mecrab"
version.workspace = true
edition.workspace = true

[features]
default = ["serde", "serde_json"]
json = ["serde", "serde_json"]
parallel = ["rayon"]
simd = []

[dependencies]
# Core dependencies (always needed)
memmap2.workspace = true
byteorder.workspace = true
encoding_rs.workspace = true
thiserror.workspace = true
yada.workspace = true
bytemuck.workspace = true

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
