[package]
name = "mecrab"
version.workspace = true
edition.workspace = true

[features]
default = []
parallel = ["rayon"]
simd = []

[dependencies]
id-arena = { workspace = true }
tinyvec = { workspace = true }

# Core dependencies (always needed)
memmap2.workspace = true
byteorder.workspace = true
encoding_rs.workspace = true
thiserror.workspace = true
yada.workspace = true
bytemuck.workspace = true

rayon = { workspace = true, optional = true }
