[package]
name = "{{ feature_name }}-app"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
shared = { path = "../shared" }
{{ feature_name }}-domain = { path = "../{{ feature_name }}-domain" }

[dev-dependencies]

[lints]
workspace = true
