[package]
name = "{{ feature_name }}-infra"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
shared = { path = "../shared" }
{{ feature_name }}-app = { path = "../{{ feature_name }}-app" }
{{ feature_name }}-domain = { path = "../{{ feature_name }}-domain" }

railgun = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
