[package]
name = "{{ feature_name }}"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
shared = { path = "../shared" }
{{ feature_name }}-app = { path = "../{{ feature_name }}-app" }
{{ feature_name }}-infra = { path = "../{{ feature_name }}-infra" }

railgun = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
