[package]
name = "dictionary-app"
version.workspace = true
authors.workspace = true
edition.workspace = true

publish = false

[features]
default = []

[dependencies]
shared = { path = "../shared" }
dictionary-domain = { path = "../dictionary-domain" }

railgun = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
